# SimpleCFD

./: .gitignore  LICENSE  README.md  plot_convergence.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
docs/: architecture.md  developer_guide.md  limitations.md  numerical_methods.md  portfolio.md  project_review.md  testing.md  verification.md
examples/: convergence_report.py  mesh_refinement.py  method_report.py  run_versteeg.py
simplecfd/: __init__.py  __main__.py  analytic_benchmarks.py  benchmarks.py  cases.py  cli.py  coefficients.py  comparison.py  couette.py  dashboard.py  fields.py  geometry.py  linalg.py  mesh_refinement.py  momentum_terms.py  poiseuille.py  reports.py  simple_loop.py  solver.py  telemetry.py  verification.py
simplecfd/assembly/: __init__.py  momentum.py  pressure_absolute.py  pressure_correction.py
simplecfd/boundary/: __init__.py  inlet.py  outlet.py
tests/: conftest.py  test_analytic_benchmarks.py  test_benchmarks.py  test_case_comparison.py  test_cli.py  test_convergence_telemetry.py  test_couette.py  test_dashboard.py  test_distribution.py  test_geometry_field.py  test_mesh_refinement.py  test_momentum_boundaries.py  test_momentum_internal_node.py  test_momentum_terms.py  test_numerical_regression.py  test_numerical_rigor.py  test_poiseuille.py  test_pressure_absolute.py  test_pressure_correction.py  test_problem_definition.py  test_reports.py  test_scheme_variants.py  test_simple_loop.py  test_simpler_momentum_helpers.py  test_solver.py  test_tdma.py  test_verification.py  test_versteeg_converged_nodes.py
(+13 files in other folders)
