[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplecfd"
version = "0.1.0"
description = "Small 1D finite-volume SIMPLE solver for nozzle studies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "SimpleCFD contributors" },
]
keywords = ["cfd", "finite-volume", "simple", "nozzle", "numerical-methods"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
simplecfd = "simplecfd.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["simplecfd*"]
exclude = ["tests*", "outputs*", "docs*"]

[tool.setuptools.package-data]
simplecfd = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
